--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
 
         <activity android:name=".SearchActivity"></activity>
         <activity android:name=".KakaoFunctionsActivity"></activity>
-
+        <activity android:name=".NaverFunctionActivity"></activity>
     </application>
 
 </manifest>
