0826 - 뉴스 액티비티 완성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
         <activity android:name=".KakaoFunctionsActivity"></activity>
         <activity android:name=".NaverFunctionActivity"></activity>
         <activity android:name=".FavorActivity"></activity>
+        <activity android:name=".NewsFunctionActivity"></activity>
+
     </application>
 
 </manifest>
