--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+GITHUB_ID={ghdrbs000}
+GITHUB_PACKAGES_TOKEN={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}
