--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'org.jetbrains.kotlin:kotlin-parcelize-runtime:1.8.0'
     implementation "io.github.torrydo:floating-bubble-view:0.5.6"
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
