0830 - 버블기능완성 추후 기능 추가 탑재

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,5 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 GITHUB_ID={ghdrbs000}
 GITHUB_PACKAGES_TOKEN={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}
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
