--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.ACTION_MANAGE_OVERLAY_PERMISSION" />
-    <!--인터넷 포그라운드 권한 -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <!--어플에 인텐트 할때 기입 -->
     <queries>
         <package android:name = "com.kakao.talk" />
         <package android:name = "com.nhn.android.search" />
-        <package android:name = "com.woowahan.baemin" />
+        <package android:name = "com.sampleapp" />
         <package android:name = "com.google.android.youtube" />
         <package android:name = "net.daum.android.mail" />
+        <package android:name = "com.nhn.android.nmap" />
     </queries>
-
+    <!--서비스,액티비티 추가 -->
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -50,6 +52,7 @@
         <activity android:name=".NaverFunctionActivity"></activity>
         <activity android:name=".FavorActivity"></activity>
         <activity android:name=".NewsFunctionActivity"></activity>
+        <activity android:name=".SplashActivity"></activity>
 
     </application>
 
