--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,22 +37,25 @@
                 android:resource="@xml/accessibility_service_config" />
         </service>
         <service android:name=".BubbleService" />
-
+        <!--액티비티 구성-->
         <activity
             android:name=".MainActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".SearchActivity"></activity>
         <activity android:name=".KakaoFunctionsActivity"></activity>
         <activity android:name=".NaverFunctionActivity"></activity>
         <activity android:name=".FavorActivity"></activity>
         <activity android:name=".NewsFunctionActivity"></activity>
-        <activity android:name=".SplashActivity"></activity>
+
 
     </application>
 
