--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,8 +51,14 @@
             </intent-filter>
         </activity>
         <activity android:name=".SearchActivity"></activity>
-        <activity android:name=".KakaoFunctionsActivity"></activity>
-        <activity android:name=".NaverFunctionActivity"></activity>
+        <activity
+            android:name=".KakaoFunctionsActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".NaverFunctionActivity"
+            android:exported="true">
+        </activity>
         <activity android:name=".FavorActivity"></activity>
         <activity android:name=".NewsFunctionActivity"></activity>
 
