--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,17 +50,30 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SearchActivity"></activity>
+        <activity
+            android:name=".SearchActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"></activity>
         <activity
             android:name=".KakaoFunctionsActivity"
-            android:exported="true">
+            android:exported="true"
+            android:parentActivityName=".MainActivity"
+           >
         </activity>
         <activity
             android:name=".NaverFunctionActivity"
-            android:exported="true">
+            android:exported="true"
+            android:parentActivityName=".MainActivity">
         </activity>
-        <activity android:name=".FavorActivity"></activity>
-        <activity android:name=".NewsFunctionActivity"></activity>
+        <activity
+            android:name=".FavorActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity">
+        </activity>
+        <activity
+            android:name=".NewsFunctionActivity"
+            android:parentActivityName=".NaverFunctionActivity"></activity>
+
 
 
     </application>
