--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.ACTION_MANAGE_OVERLAY_PERMISSION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
     <!--어플에 인텐트 할때 기입 -->
     <queries>
         <package android:name = "com.kakao.talk" />
@@ -28,7 +29,8 @@
             android:name=".FloatingImageService"
             android:enabled="true"
             android:exported="true"
-            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
+            android:foregroundServiceType="specialUse">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
             </intent-filter>
@@ -36,7 +38,10 @@
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility_service_config" />
         </service>
-        <service android:name=".BubbleService" />
+        <service
+            android:name=".BubbleService"
+            android:foregroundServiceType="specialUse">
+        </service>
         <!--액티비티 구성-->
         <activity
             android:name=".MainActivity"
@@ -53,7 +58,8 @@
         <activity
             android:name=".SearchActivity"
             android:exported="false"
-            android:parentActivityName=".MainActivity"></activity>
+            android:parentActivityName=".MainActivity">
+        </activity>
         <activity
             android:name=".KakaoFunctionsActivity"
             android:exported="true"
@@ -72,7 +78,8 @@
         </activity>
         <activity
             android:name=".NewsFunctionActivity"
-            android:parentActivityName=".NaverFunctionActivity"></activity>
+            android:parentActivityName=".NaverFunctionActivity">
+        </activity>
 
 
 
